0x07-python-test_driven_development/tests/0-add_integer.txt
=============================
The ``0-add_integer`` module
=============================

Using 'add_integer'

-------------------

    >>> add_integer = __import__('0-add_integer').add_integer

Now use it:

    >>> add_integer(10.2, 100.1)
    110
    >>> add_integer(100)
    198
    >>> add_integer(1, 3)
    4
    >>> add_integer(-1, -1)
    -2
    >>> add_integer("one", "two")
    Traceback (most recent call last):
      ...
        raise TypeError("a must be an integer")
    TypeError: a must be an integer
    >>> add_integer(1, "two")
    Traceback (most recent call last):
      ...
        raise TypeError("b must be an integer")
    TypeError: b must be an integer
    >>> add_integer()
    Traceback (most recent call last):
      ...
    TypeError: add_integer() missing 1 required positional argument: 'a'
    >>> add_integer(Nan)
    Traceback (most recent call last):
      ...
    NameError: name 'Nan' is not defined
    >>> add_integer(None)
    Traceback (most recent call last):
      ...
        raise TypeError("a must be an integer")
    TypeError: a must be an integer
    >>> add_integer(10000e1000)
    Traceback (most recent call last):
      ...
        a = int(a)
            ^^^^^^
    OverflowError: cannot convert float infinity to integer

